# app/controllers/api/v1/users_controller.rb
@@ -3,27 +3,35 @@
 module Api
   module V1
     class UsersController < ApplicationController
+      USER_NOT_FOUND = 'User not found'.freeze
+
       before_action :set_user, only: %i[show update destroy]
 
       # GET /api/v1/users
       def index
         @users = User.all
-        render json: @users.as_json(only: %i[id username])
+        # render json: @users.as_json(only: %i[id username pronouns slug])
+        render json: @users.as_json
       end
 
       # GET /api/v1/users/:id
       def show
-        render json: @user
+        render json: @user.as_json(only: %i[id username pronouns])
+      rescue ActiveRecord::RecordNotFound
+        render json: { error: USER_NOT_FOUND }, status: :not_found
       end
 
       # POST /api/v1/users
       def create
-        @user = User.new(user_params)
+        p = params.require(:user).permit(:username, :email, :first_name, :last_name, :pronouns, :password, :password_confirmation)
+        @user = User.new p
         if @user.save
-          render json: @user, status: :created, location: api_v1_user_url(@user)
+          render json: @user, status: :created
         else
           render json: @user.errors, status: :unprocessable_entity
         end
+      rescue ActionController::ParameterMissing => e
+        render json: { error: e.message }, status: :bad_request
       end
 
       # PATCH/PUT /api/v1/users/:id
@@ -33,12 +41,16 @@ module Api
         else
           render json: @user.errors, status: :unprocessable_entity
         end
+      rescue ActiveRecord::RecordNotFound
+        render json: { error: USER_NOT_FOUND }, status: :not_found
       end
 
       # DELETE /api/v1/users/:id
       def destroy
         @user.destroy
-        head :no_content
+        render json: { message: 'User deleted' }, status: :ok
+      rescue ActiveRecord::RecordNotFound
+        render json: { error: USER_NOT_FOUND }, status: :not_found
       end
 
       private
@@ -50,7 +62,7 @@ module Api
 
       # Only allow a list of trusted parameters through.
       def user_params
-        params.require(:user).permit(:name, :email, :password)
+        params.require(:user).permit(:id, :username, :email, :pronouns, :first_name, :last_name)
       end
     end
   end
